--- a/Open Terminal Finder Extension/Open_Terminal_Finder_Extension.entitlements
+++ b/Open Terminal Finder Extension/Open_Terminal_Finder_Extension.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>fr.qparis.openterminal</string>
+		<string>$(TeamIdentifierPrefix)</string>
 	</array>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
